RESOLVED FIXED162596
[EFL] Fix debug build break since r204205
https://bugs.webkit.org/show_bug.cgi?id=162596
Summary [EFL] Fix debug build break since r204205
Joonghun Park
Reported 2016-09-27 00:04:18 PDT
Fix debug build break of the message as below. In file included from ../../Source/WTF/wtf/StdLibExtras.h:33:0, from ../../Source/WTF/wtf/FastMalloc.h:26, from ../../Source/WebCore/config.h:75, from ../../Source/WebCore/platform/graphics/BitmapImage.cpp:27: ../../Source/WebCore/platform/graphics/BitmapImage.cpp: In member function ‘WebCore::NativeImagePtr WebCore::BitmapImage::frameImageAtIndex(size_t, float)’: ../../Source/WTF/wtf/Assertions.h:394:68: error: format ‘%d’ expects argument of type ‘int’, but argument 4 has type ‘WebCore::SubsamplingLevel’ [-Werror=format=] #define LOG(channel, ...) WTFLog(&LOG_CHANNEL(channel), __VA_ARGS__) ^ ../../Source/WebCore/platform/graphics/BitmapImage.cpp:351:5: note: in expansion of macro ‘LOG’ LOG(Images, "BitmapImage %p frameImageAtIndex - subsamplingLevel %d at scale %.4f", this, subsamplingLevel, presentationScaleHint); ^ ../../Source/WTF/wtf/Assertions.h:394:68: error: format ‘%d’ expects argument of type ‘int’, but argument 3 has type ‘WebCore::SubsamplingLevel’ [-Werror=format=] #define LOG(channel, ...) WTFLog(&LOG_CHANNEL(channel), __VA_ARGS__) ^ ../../Source/WebCore/platform/graphics/BitmapImage.cpp:356:9: note: in expansion of macro ‘LOG’ LOG(Images, " subsamplingLevel was %d, resampling", m_frames[index].subsamplingLevel()); ^ cc1plus: all warnings being treated as errors
Attachments
Joonghun Park
Comment 1 2016-09-27 00:09:40 PDT
Michael Catanzaro
Comment 2 2016-10-07 02:35:44 PDT
*** Bug 162552 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.