[EFL] Fix debug build break since r204205. Unreviewed https://bugs.webkit.org/show_bug.cgi?id=162596

No new tests, no new behaviours.

* platform/graphics/BitmapImage.cpp:
(WebCore::BitmapImage::frameImageAtIndex):

Canonical link: https://commits.webkit.org/180536@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206419 268f45cc-cd09-0410-ab3c-d52691b4dbfc